test/files/neg/t8675.check
t8675.scala:13: error: type mismatch;
 found   : true.type (with underlying type Boolean)
 required: String
    a.update(0, x[A]({new isString(true)})) // !!! allowed
                                   ^
t8675.scala:22: error: type mismatch;
 found   : true.type (with underlying type Boolean)
 required: String
    new X().m(x[A]({new isString(true)})) // !!! allowed
                                 ^
two errors found
